--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -4,12 +4,12 @@
 
 .container {
 	margin: 0 auto;
-	text-align: center;
 	width: 1000px;
 }
 
 #first {
 	margin: 0 0 20px 0;
+	text-align: center
 }
 
 #second {
