--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -83,3 +83,93 @@ footer {
  * 					User_home
  =	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
 
+#userLeft {
+	width: 400px;
+	float: left;
+}
+
+
+/*	=	=	=	Spending	=	=	=	*/
+
+#spending {
+	height: 500px;
+	margin: 0 0 0 5px;
+}
+
+.em {
+	font-size: 16px;
+	font-weight: bold;
+	float: left;
+	margin: 0 15px 0 0;
+}
+
+.green {
+	color: #52a672;
+	font-size: 16px;
+	margin: 5px 0 5px 0;
+}
+
+.red {
+	color: #a65252;
+	font-size: 16px;
+	margin: 5px 0 5px 0;
+}
+
+#top3 {
+	margin: 5px 0 0 25px;
+}
+
+.tinyem {
+	font-weight: bold;
+	float: left;
+	margin: 0 10px 0 0;
+}
+
+.tinyred {
+	color: #A65252;
+	margin: 0 5px 0 5px;
+}
+
+#totalBar {
+	width: 250px;
+	margin: 3px 0 0 0;
+	border: 1px solid #000;
+}
+
+#total {
+	margin: 5px 0 0 0;
+}
+
+.blue {
+	color: #7B72E9;
+	font-size: 16px;
+}
+
+
+/*	=	=	=	Transactions	=	=	=	*/
+
+#transactions {
+	margin: 0 5px 0 0;
+	height: 500px;
+}
+
+/*.odd {
+	background: #eaeaea;
+	padding: 5px 10px 5px 10px;
+	width: 200px;
+}*/
+
+.note {
+	font-weight: bold;
+	float: left;
+	width: 100px;
+}
+
+.category {
+	float: left;
+	width: 100px;
+	margin: 0 0 0 5px;
+}
+
+
+
