--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -171,5 +171,15 @@ footer {
 	margin: 0 0 0 5px;
 }
 
+/*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	
+ * 					Add expense/income
+ =	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
+
+#add_expense {
+	margin: 10px 0 0 30px;
+}
+
+
+
 
 
