--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -172,7 +172,7 @@ footer {
 }
 
 /*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	
- * 					Add expense/income
+ * 					Add expense/income/Categories
  =	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
 
 #add_expense, #add_income {
@@ -183,6 +183,27 @@ footer {
 	margin: 5px 0 0 175px;
 }
 
+#addCategory {
+	margin: 0 0 0 250px;
+}
+
+#addCategory label {
+	font-size: 16px;
+	font-weight: bold;
+	float: left;
+	width: 130px;
+}
+
+#category_name {
+	width: 150px;
+	height: 15px;
+	float: left;
+	margin: 0 10px 0 0;
+}
+
+#catSub {
+	margin: 2px 0 0 0;
+}
 
 
 
