--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -48,16 +48,16 @@ red color: #a65252;*/
 
 #form {
 	float: left;
-	width: 600px;
+	width: 650px;
 }
 
-.user_first, .user_email, .user_pass {
+#firstName, #email, #password {
 	float: left;
 	margin: 0 20px 0 0;
 }
 
-#landing_reg {
-	margin: 20px 0 0 400px;
+#regSub {
+	margin: 20px 0 0 390px;
 }
 
 #benifits {
@@ -74,8 +74,13 @@ footer {
  * 					Register/Login
  =	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
 
-#reg_form, #login_form {
+.outer {
 	text-align: center;
+}
+
+#reg_form, #login_form {
+	margin: 0 auto;
+	width: 600px;
 }
 
 
