categories added, not edited or deleting, working on expenses

--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -188,29 +188,31 @@ footer {
 	margin: 5px 0 0 175px;
 }
 
-#addCategory {
+/*	=	=	=	=	Add/Edit Category	=	=	=	=	*/
+
+#addCategory, #editCategory {
 	margin: 0 0 0 5px;
 }
 
-#addCategory label {
+#addCategory label, #editCategory label {
 	font-size: 16px;
 	font-weight: bold;
 	float: left;
 	width: 130px;
 }
 
-#category_name {
+#category_name, #edit_categeory_name {
 	width: 150px;
 	height: 15px;
 	float: left;
 	margin: 0 10px 0 0;
 }
 
-#catSub {
+#catSub, #editSub {
 	margin: 2px 0 0 0;
 }
 
-#categories {
+.categories {
 	margin: 0 0 0 5px;
 }
 
