--- a/costais/css/main.css
+++ b/costais/css/main.css
@@ -89,7 +89,7 @@ footer {
  =	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
 
 #userLeft {
-	width: 400px;
+	width: 300px;
 	float: left;
 }
 
@@ -97,13 +97,18 @@ footer {
 /*	=	=	=	Transactions	=	=	=	*/
 
 #transactions {
-	margin: 0 5px 0 0;
+	margin: 0 5px 50px 0;
 	height: 600px;
 }
 
 .trans {
-	width: 600px;
-	background-color: #eaeaea;
+	width: 310px;
+	clear: left;
+}
+
+.trans:nth-child(odd)
+{
+  background-color: #eaeaea;
 }
 
 /*.odd {
@@ -112,16 +117,28 @@ footer {
 	width: 200px;
 }*/
 
-.note {
-	font-weight: bold;
+.transLeft {
 	float: left;
-	width: 100px;
 }
 
-.category {
-	float: left;
-	width: 100px;
-	margin: 0 0 0 5px;
+.note {
+	width: 200px;
+	font-size: 16px;
+	margin: 4px 0 0 0;
+	padding: 0 0 0 10px;
+}
+
+.amount {
+	font-weight: bold;
+	padding: 3px 0 0 15px;
+}
+
+.date {
+	padding: 5px 0 0 0;
+}
+
+.cate {
+	margin: 0 0 0 0;
 }
 
 /*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	
